add print max_address

--- a/configs/HBM-config.cfg
+++ b/configs/HBM-config.cfg
@@ -7,6 +7,7 @@
  ranks = 1
  speed = HBM_1Gbps
  org = HBM_1Gb
+ #org = HBM_4Gb
 # record_cmd_trace: (default is off): on, off
  record_cmd_trace = off
 # print_cmd_trace: (default is off): on, off
